# resolve_collision

./: Cargo.toml  README.md  build.rs
data/fanuc/convex/: link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
data/fanuc/mesh/: link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
data/gen_circle/: options.json
data/gen_drop/: options.json
data/pick_plan/: boxes.json  cloud.pcd  container.json  gripper.json  pickable.json
data/pickable/: boxes.json
data/remove_points_near/: boxes.json  cloud.pcd
data/resolve_collision/: stacking.json
data/simulate_lidar/: boxes.json  lidar_info.json  scene_wo_boxes.stl
proto/sim_world/: sim_world.proto
src/: common.rs  gripper.rs  lib.rs  lidar.rs  main.rs  pcd_io.rs  robot.rs
src/sim_world/: client.rs  geometry.rs  server.rs
