[package]
name = "resolve_collision"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.4", features = ["derive"]}
geo = "0.28.0"
geo-types = {version = "0.7.13", features = ["serde"]}
ncollide3d = {version = "0.33.0"}
ndarray = "0.15.6"
rand = "0.8.5"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
stl_io = "0.7.0"
