[package]
name = "resolve_collision"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sim-world-server"
path = "src/sim_world/server.rs"

[[bin]]
name = "sim-world-client"
path = "src/sim_world/client.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
geo = "0.28.0"
geo-types = { version = "0.7.13", features = ["serde"] }
ncollide3d = { version = "0.33.0" }
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
rerun = "0.17.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
stl_io = "0.7.0"
tonic = "0.12.0"
prost = "0.13.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
rapier3d = "0.21.0"
env_logger = "0.11.3"
log = "0.4.22"

[build-dependencies]
tonic-build = "0.12.0"
